fix link wrapping

--- a/themes/catppollo/sass/parts/_misc.scss
+++ b/themes/catppollo/sass/parts/_misc.scss
@@ -50,6 +50,8 @@ a {
   position: relative; // needed for z-index
   //z-index: 1;
 
+  white-space: nowrap;
+
   transition: all 150ms ease-in-out;
 }
 
